// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v2 render snapshots full render snapshot for representative case 1`] = `
"<div class="pp-message" data-pp-style-layout="text" data-pp-style-logo-position="left" data-pp-style-logo-type="primary" data-pp-style-text-align="left" data-pp-style-text-color="black" data-pp-style-text-size="12"><style>
body {
    margin: 0;
    padding: 0;
}

.pp-message {
    display: block;
    width: 100%;
    cursor: pointer;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.3;
    text-align: left;
}

.pp-message .main.black { color: #000; }
.pp-message .main.monochrome { color: #000; }
.pp-message .main.grayscale { color: #000; }
.pp-message .main.white { color: #fff; }

.pp-message .action__link {
  color: #0070ba;
  text-decoration: underline;
  text-decoration-color: currentColor;
  white-space: nowrap;
}
.pp-message .monochrome .action__link,
.pp-message .grayscale .action__link { color: #000; }
.pp-message .white .action__link { color: #fff; text-decoration-color: #fff; }

button:focus .pp-message .main,
button:active .pp-message .main {
  text-decoration: underline;
}

.pp-message .logo {
  display: inline-block;
  line-height: 1.3;
  vertical-align: top;
}
.pp-message .logo.top {
  display: block;
}
.pp-message .logo.paypal-credit {
  vertical-align: middle;
}
.pp-message .logo.inline {
  display: inline;
}
.pp-message .logo.inline.paypal-credit {
  vertical-align: middle;
}

.pp-message img {
  max-height: 1.25em;
  height: 1.25em;
  width: auto;
  margin-right: 0.3125em;
}

.pp-message .logo.right img {
  margin-right: 0;
  margin-left: 0.3125em;
}
.pp-message .logo.top img:last-child {
  margin-right: 0;
}
.pp-message .logo.inline img {
  display: inline-block;
  margin-right: 0;
}

.pp-message .logo.inline.paypal-credit img {
  vertical-align: text-top;
  max-height: 1em;
  height: 1em;
}
</style><span role="img" aria-label="PayPal" class="logo black left wordmark paypal"><img src="data:local/color-monogram" alt role="presentation" width="24" height="32" /><img src="data:local/color-wordmark" alt role="presentation" width="100" height="32" /></span><span aria-label="Pay Later. Subject to approval." class="main left black">Pay Later. Subject to approval.</span> <span aria-label="Learn more" class="action black"><span class="action__link">Learn more</span></span></div>"
`;

exports[`v2 render snapshots renders the v2 stylesheet once 1`] = `
"<style>
body {
    margin: 0;
    padding: 0;
}

.pp-message {
    display: block;
    width: 100%;
    cursor: pointer;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.3;
    text-align: left;
}

.pp-message .main.black { color: #000; }
.pp-message .main.monochrome { color: #000; }
.pp-message .main.grayscale { color: #000; }
.pp-message .main.white { color: #fff; }

.pp-message .action__link {
  color: #0070ba;
  text-decoration: underline;
  text-decoration-color: currentColor;
  white-space: nowrap;
}
.pp-message .monochrome .action__link,
.pp-message .grayscale .action__link { color: #000; }
.pp-message .white .action__link { color: #fff; text-decoration-color: #fff; }

button:focus .pp-message .main,
button:active .pp-message .main {
  text-decoration: underline;
}

.pp-message .logo {
  display: inline-block;
  line-height: 1.3;
  vertical-align: top;
}
.pp-message .logo.top {
  display: block;
}
.pp-message .logo.paypal-credit {
  vertical-align: middle;
}
.pp-message .logo.inline {
  display: inline;
}
.pp-message .logo.inline.paypal-credit {
  vertical-align: middle;
}

.pp-message img {
  max-height: 1.25em;
  height: 1.25em;
  width: auto;
  margin-right: 0.3125em;
}

.pp-message .logo.right img {
  margin-right: 0;
  margin-left: 0.3125em;
}
.pp-message .logo.top img:last-child {
  margin-right: 0;
}
.pp-message .logo.inline img {
  display: inline-block;
  margin-right: 0;
}

.pp-message .logo.inline.paypal-credit img {
  vertical-align: text-top;
  max-height: 1em;
  height: 1em;
}
</style>"
`;
